Add guide on adding epub to SuperMemo

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Europe/Budapest
 
 title: farkasseb # the main title
 
-tagline: finding for my future self # it will display as the sub-title
+tagline: findings for my future self # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
 
